src/stylus/components/lists.styl
@require '../_variables.styl';

.list
	position relative
	padding 0
	margin 0
	list-style none

	li
		height auto
		min-height (list-simple-item-height - 1px)
		line-height list-simple-item-height

		overflow hidden /* for accordion animation */
		display block
		border-bottom 1px solid #eee

		a
			width 100%
			height 100%
			display block
			color #000
			transition background-color 250ms ease-in-out

			&:active
				background-color list-item-background-active

		.pull-left, .pull-right
			width list-simple-item-height
			height list-simple-item-height
			line-height list-simple-item-height
			vertical-align middle
			text-align center
			z-index 1

		.item-content
			display inline-block
			padding list-cell-content-padding 15px
			line-height  list-expanded-item-height

		.accordion-content
			position absolute
			height auto
			display none
			transition max-height 300ms ease-in-out
			padding 0 padding-phone
			background-color #f9f9f9

		.accordion-active
			position static
			display block
			transition max-height 300ms ease-in-out

		.title, .body
			line-height ((list-expanded-item-height - (list-cell-content-padding*2))/2)
			display block

		.body
			font-size 13px
			color #777


	.item-expanded
		height list-expanded-item-height
		line-height list-expanded-item-height

		.pull-left, .pull-right
			width list-expanded-item-height
			height list-expanded-item-height
			line-height list-expanded-item-height

	.divider
		height list-divider-height
		line-height list-divider-height
		font-size 16px
		background-color #f5f5f5


	.divider, .padded-list
		padding 0 padding-phone

